# DiVeQ_PyPI

./: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
example/: requirements.txt  train.py
src/diveq/: __init__.py
