[project]
name = "diveq"
authors = [{name = "Mohammad Hassan Vali", email = "mohammad.vali@aalto.fi"}]
version = "0.2"
description = "A PyTorch class for end-to-end optimization of the codebook in a vector quantization task."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
]

keywords = [
    "deep-learning",
    "pytorch",
    "vector-quantization",
    "machine-learning",
    "VQ-VAE",
    "tokenization",
    "representation-learning"
]

[project.urls]
Homepage = "https://github.com/MHVali/DiVeQ_PyPI"
Repository = "https://github.com/MHVali/DiVeQ_PyPI"
Issues = "https://github.com/MHVali/DiVeQ_PyPI/issues"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"